--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -317,6 +317,7 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\UnifiedTurnBuild.hpp" />
     <ClInclude Include="..\..\..\..\source\client\renderer\FoliageColor.hpp" />
     <ClInclude Include="..\..\..\..\source\client\renderer\GrassColor.hpp" />
+    <ClInclude Include="..\..\..\..\source\client\gui\components\OptionList.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -414,6 +415,7 @@
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\UnifiedTurnBuild.cpp" />
     <ClCompile Include="..\..\..\..\source\client\renderer\FoliageColor.cpp" />
     <ClCompile Include="..\..\..\..\source\client\renderer\GrassColor.cpp" />
+    <ClCompile Include="..\..\..\..\source\client\gui\components\OptionList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
