* Fix some build issues.

--- a/.gitignore
+++ b/.gitignore
@@ -142,6 +142,8 @@ xcuserdata/
 /game/assets/gui/items.png
 /game/assets/gui/title.png
 /game/assets/item/camera.png
+/game/assets/misc/foliagecolor.png
+/game/assets/misc/grasscolor.png
 /game/assets/mob/char.png
 /game/assets/particles.png
 /game/assets/terrain.png
