--- a/platforms/sdl/android/app/src/main/AndroidManifest.xml
+++ b/platforms/sdl/android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,8 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application android:label="@string/app_name"
-        android:icon="@drawable/icon"
+        android:icon="@mipmap/ic_launcher"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:allowBackup="true"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
         android:hardwareAccelerated="true">
