--- a/platforms/android/project/app/src/main/cpp/CMakeLists.txt
+++ b/platforms/android/project/app/src/main/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16.0)
 project(reminecraftpe-android)
 
 # Project Root
-set(MC_ROOT ../../../../../../..)
+set(MC_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../../../../../../..")
 
 # Native Android Build
 add_compile_definitions(USE_NATIVE_ANDROID)
