Move LegacyCPPCompatibility.hpp from common to compat folder

--- a/platforms/windows/projects/Common/Common.vcxproj.filters
+++ b/platforms/windows/projects/Common/Common.vcxproj.filters
@@ -38,7 +38,7 @@
     <ClCompile Include="$(MC_ROOT)\source\common\SmoothFloat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="$(MC_ROOT)\source\common\LegacyCPPCompatibility.hpp">
+    <ClCompile Include="$(MC_ROOT)\compat\LegacyCPPCompatibility.hpp">
       <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
