iOS 3 Compatibility Attempt

--- a/platforms/ios/minecraftpe-Info.plist
+++ b/platforms/ios/minecraftpe-Info.plist
@@ -33,9 +33,7 @@
 	<key>UIPrerenderedIcon</key>
 	<true/>
 	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
+	<array/>
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>UISupportedInterfaceOrientations</key>
