--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -317,6 +317,7 @@ if(USE_SDL)
     if(USE_GLES1_COMPATIBILITY_LAYER)
         set(GLES_COMPATIBILITY_LAYER_USE_SDL TRUE CACHE BOOL "" FORCE)
         set(GLES_COMPATIBILITY_LAYER_DEPENDENCY SDL CACHE STRING "" FORCE)
+        set(GLES_COMPATIBILITY_LAYER_USE_ES3 FALSE CACHE BOOL "" FORCE)
         add_subdirectory(../thirdparty/gles-compatibility-layer gles-compatibility-layer)
         target_link_libraries(reminecraftpe-core PUBLIC gles-compatibility-layer)
         target_compile_definitions(reminecraftpe-core PUBLIC USE_GLES1_COMPATIBILITY_LAYER)
