--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,7 @@ jobs:
                 -configuration "Release (Default)" \
                 -destination generic/platform=macOS \
                 GCC_PREPROCESSOR_DEFINITIONS='MISSING_SOUND_DATA $(GCC_PREPROCESSOR_DEFINITIONS)' \
+                -quiet \
                 clean archive 
     #build-ios:
     #    runs-on: macos-latest
