--- a/platforms/windows/projects/Client/Client.vcxproj
+++ b/platforms/windows/projects/Client/Client.vcxproj
@@ -253,7 +253,9 @@
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\SelectWorldScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\model\Cube.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\ModelPart.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\model\HumanoidModel.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\model\QuadrupedModel.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\model\Model.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\model\PolygonQuad.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.hpp" />
@@ -315,9 +317,9 @@
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\TouchInputHolder.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\TouchscreenInput_TestFps.hpp" />
     <ClInclude Include="$(MC_ROOT)\source\client\player\input\UnifiedTurnBuild.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\renderer\FoliageColor.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\renderer\GrassColor.hpp" />
-    <ClInclude Include="..\..\..\..\source\client\gui\components\OptionList.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\FoliageColor.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\renderer\GrassColor.hpp" />
+    <ClInclude Include="$(MC_ROOT)\source\client\gui\components\OptionList.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(MC_ROOT)\source\client\app\App.cpp" />
@@ -351,7 +353,9 @@
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\SelectWorldScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\gui\screens\StartMenuScreen.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\model\Cube.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\ModelPart.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\model\HumanoidModel.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\model\QuadrupedModel.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\model\Model.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\model\PolygonQuad.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\network\ClientSideNetworkHandler.cpp" />
@@ -413,9 +417,9 @@
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\TouchInputHolder.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\TouchscreenInput_TestFps.cpp" />
     <ClCompile Include="$(MC_ROOT)\source\client\player\input\UnifiedTurnBuild.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\renderer\FoliageColor.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\renderer\GrassColor.cpp" />
-    <ClCompile Include="..\..\..\..\source\client\gui\components\OptionList.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\FoliageColor.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\renderer\GrassColor.cpp" />
+    <ClCompile Include="$(MC_ROOT)\source\client\gui\components\OptionList.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Common\Common.vcxproj">
